<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eventapps.data.ui.main.DetailFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_open_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/iv_event_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_launcher_background" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/favorite"
                app:layout_constraintBottom_toBottomOf="@+id/iv_event_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_event_image"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.App.Circle"
                app:srcCompat="@drawable/ic_favorite" />

            <TextView
                android:id="@+id/tv_event_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_event_image"
                tools:text="Event Name" />

            <TextView
                android:id="@+id/tv_event_owner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_event_name"
                app:layout_constraintStart_toStartOf="@+id/tv_event_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_name"
                tools:text="By Owner Name" />

            <TextView
                android:id="@+id/tv_event_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_event_name"
                app:layout_constraintStart_toStartOf="@+id/tv_event_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_owner"
                tools:text="Waktu: 20 Oct 2023, 10:00" />

            <TextView
                android:id="@+id/tv_event_quota"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_event_name"
                app:layout_constraintStart_toStartOf="@+id/tv_event_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_time"
                tools:text="Sisa Kuota: 50" />

            <TextView
                android:id="@+id/tv_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/deskripsi"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/tv_event_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_event_quota" />

            <TextView
                android:id="@+id/tv_event_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_event_name"
                app:layout_constraintStart_toStartOf="@+id/tv_event_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_description_label"
                tools:text="Ini adalah deskripsi panjang mengenai event tersebut..." />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_open_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/registrasi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>